# blessed.poem

./: .gitignore  install  pyproject.toml
.insitu/: activate
poem/cmdtree/: class_CMD.py  cmdtool.py  console.py  util.py
poem/cmdtree/tests/: conftest.py
poem/cmdtree/tests/CMD_methods/: test_dxxxx.py  test_name.py  test_parent.py  test_parents.py  test_subcmds.py
poem/cmdtree/tests/fixtures/: blocks.py
poem/cmdtree/tests/fixtures/root/sol/: __init__.py
poem/cmdtree/tests/fixtures/root/sol/planet/: __doc__  __init__.py  venus.__doc__  venus.__init__.py
poem/cmdtree/tests/fixtures/root/sol/planet/jupiter/: __doc__  __eval__  __init__.py  europa.__doc__  europa.__init__.py
poem/cmdtree/usage/: classes.py
poem/func/: __init__.py
poem/hansel/: __init__.py  console.py
tests/: test_version.py
